--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <section class="main-content">
       <p>This page is for 15-400 project by Yongjin Cho.</p>
 
-<p>Written Proposal : written proposal</p>
+<p>Written Proposal : <a href="http://www.andrew.cmu.edu/user/ycho1/Projectproposal.pdf">Proposal</a></p>
 
 <p>Biweekly report (1/28/2016) : <a href="http://www.andrew.cmu.edu/user/ycho1/BR_128.pdf">Biweekly Report</a></p>
+
 
 <p>More contents will be added.</p>
 
