--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <p>Biweekly report (1/28/2016) : <a href="http://www.andrew.cmu.edu/user/ycho1/BR_128.pdf">Biweekly Report</a></p>
 <p>Biweekly report (2/12/2016) : <a href="http://www.andrew.cmu.edu/user/ycho1/BR_212.pdf">Biweekly Report</a></p>
+<p>Biweekly report (2/25/2016) : <a href="http://www.andrew.cmu.edu/user/ycho1/BR_225.pdf">Biweekly Report</a></p>
+
 
 
 <p>More contents will be added.</p>
